test/arrays/deitz/part7/test_out_array-generic.good
test_out_array-generic.chpl:1: In function 'bar':
test_out_array-generic.chpl:1: error: variable 'B' is not initialized and has no type
test_out_array-generic.chpl:2: note: 'B' is used here before it is initialized
